test/runtime/fail/while/missing_open.hy

// expect error: Expected `{`

let a = 3
while a == 3
	let a = 4
}
